// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.ReadOnlyText renders label and value 1`] = `
<DocumentFragment>
  <fieldset
    class="chakra-form-control css-1kxonj9"
    role="group"
  >
    <legend
      class="chakra-form__label css-g6pte"
      data-disabled=""
      data-readonly=""
      for="field-:r0:"
      id="field-:r0:-label"
    >
      &lt;label&gt;
    </legend>
    <input
      aria-describedby="field-:r0:-helptext"
      aria-readonly="true"
      class="chakra-input css-1cjy4zv"
      disabled=""
      id="field-:r0:"
      readonly=""
      value="<value>"
    />
    <div
      class="chakra-form__helper-text css-18fa16y"
      id="field-:r0:-helptext"
    >
      ‎
    </div>
  </fieldset>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`component.ReadOnlyText renders label value and helper text 1`] = `
<DocumentFragment>
  <fieldset
    class="chakra-form-control css-1kxonj9"
    role="group"
  >
    <legend
      class="chakra-form__label css-g6pte"
      data-disabled=""
      data-readonly=""
      for="field-:r1:"
      id="field-:r1:-label"
    >
      &lt;label&gt;
    </legend>
    <input
      aria-describedby="field-:r1:-helptext"
      aria-readonly="true"
      class="chakra-input css-1cjy4zv"
      disabled=""
      id="field-:r1:"
      readonly=""
      value="<value>"
    />
    <div
      class="chakra-form__helper-text css-18fa16y"
      id="field-:r1:-helptext"
    >
      &lt;helper text&gt;
    </div>
  </fieldset>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`component.ReadOnlyText unForceHelperText 1`] = `
<DocumentFragment>
  <fieldset
    class="chakra-form-control css-1kxonj9"
    role="group"
  >
    <legend
      class="chakra-form__label css-g6pte"
      data-disabled=""
      data-readonly=""
      for="field-:r2:"
      id="field-:r2:-label"
    >
      &lt;label&gt;
    </legend>
    <input
      aria-readonly="true"
      class="chakra-input css-1cjy4zv"
      disabled=""
      id="field-:r2:"
      readonly=""
      value="<value>"
    />
  </fieldset>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
